--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Jacob DEPARES | My Profile</title>
 </head>
-<body>
+<body style="background-color:#0b2040;">
 
-<h1>Testing</h1>
-<p>test.</p>
+<h1 style="
+text-align: center;
+color: #f0e7d5;
+padding: 10px;
+margin: 0;
+font-size: 35px"
+
+>Jacob DEPARES My Profile</h1>
+
+<hr>
+<h2 style="
+color: #f0e7d5;
+font-size: 20px"
+><i>Personal Information:</i></h2>
+
+<p1 style="
+color: #f0e7d5;
+margin: 0;"
+>Name: Jacob Depares
+<br> Student Number: S851480
+<br> Email address: S3851480@student.rmit.edu.au </p1>
+
+<h2 style="
+color: #f0e7d5;
+font-size: 20px"
+><i>About Me:</i></h2>
+
 
 </body>
 </html>
