Update - Job Add

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@ margin: 0;
 font-size: 35px"
 
 >Jacob DEPARES My Profile</h1>
-
 <hr>
+<img src="me.jpg"
+alt="Me"
+width="120"
+height="140"
+align="right">
+
 <h2 style="
 color: #f0e7d5;
 font-size: 20px"
@@ -27,10 +32,45 @@ margin: 0;"
 <br> Student Number: S851480
 <br> Email address: S3851480@student.rmit.edu.au </p1>
 
-<h2 style="
+<h3 style="
 color: #f0e7d5;
 font-size: 20px"
-><i>About Me:</i></h2>
+><i>About Me:</i></h3>
+
+<p2 style="
+color: #f0e7d5;
+margin: 0;"
+>I have been working in the IT field for over 5yrs now, starting in an IT support position and moving my way up to an IT manager position. I genuinely enjoy what I do and I’m quite fortunate that I get to work in a field I have a passion for. I have now returned to the company of my first ever IT job. The IT manager left the company and I was then invited to come rejoin the team and take over the position. <br><br>
+My grandparents originate from the small country Malta moving to Australia during WW2 and we have been here since. unfortunately, I don’t speak any other languages outside of English. I have quite a few hobbies and interests. Building PCs and cars being my main two hobbies. I built my first PC when I was 14 and have been doing so ever since. I now enjoy liquid nitrogen overclocking old hardware to push it to its limit. Some of my personal interest include quantum mechanics particle physics and astrophysics. Fascinating fields and I try and allocate some time to read paper when available. In general, I like anything that is on the absolute bleeding edge of what we know to be possible. <br><br>
+My formal education is limited currently to finishing year 12 and completing my CCNA and ITIL. Whilst I don’t have an interest in working within the networking field, I find it very interesting and was something I wanted to have a basic understanding off to help further my career as I will need to consistently engage with network engineers.
+</p2>
+
+<h4 style="
+color: #f0e7d5;
+font-size: 20px"
+><i>Interest in IT:</i></h4>
+
+<p3 style="
+color: #f0e7d5;
+margin: 0;"
+>My interest in IT range from Physical infrastructure to automation, AI and Machine learning to developing sound business process to further the success of a company. My interest in IT started like many others when I was looking to play games on PC and didn’t have the hardware to do so. Many hours of YouTube, forums and research latter I built my first liquid cooled gaming PC when I was 14. I spent quite some time watching and reading from the likes of Linus Tech Tips, OC3D, devour and Gamers Nexus. Ever since I have been an enthusiast of the space and have dedicated my career to working in the industry. . <br><br>
+I have been in the IT industry now for over 5yrs starting in IT support for a whitegoods company GroupeSEB. Then moving on to manage a small team of IT support staff for an advertising agency Publicies, servicing over 1,600 users. Today I’m back at GroupeSEB after an invitation to come back to the company after the IT manager left. . <br><br>
+I chose to study with RMIT for a verity of reasons. As I work full time, I needed a course that was 100% online so I could work around my work schedule without scarifying my quality of work or quality of study. I also was looking for a university which had quality positive feedback from past and present students which I was able to find with RMIT for both the university as a whole and the online education systems in place. Finally, I was looking for a university who had IT at its core and fundamentally understood the importance of IT in the modern area. . <br><br>
+During my studies I expect to gain a high-level overview of all major branches of IT to help me through my career. From mobile computing, security to artificial intelligence and software analytics
+</p3>
+
+<h5 style="
+color: #f0e7d5;
+font-size: 20px"
+><i>Ideal Job:</i></h5>
+<p4><a href="https://www.w3schools.com/html/" >Job advertisement link<br><br></a></p4>
+
+<img src="JobAdd.png"
+alt="JobAdd"
+width="350"
+height="600"
+align="left">
+
 
 
 </body>
