--- a/index.html
+++ b/index.html
@@ -65,13 +65,21 @@ font-size: 20px"
 ><i>Ideal Job:</i></h5>
 <p4><a href="https://www.w3schools.com/html/" >Job advertisement link<br><br></a></p4>
 
-<img src="JobAdd.png"
+<img src="master/JobAdd.png"
 alt="JobAdd"
 width="350"
 height="600"
 align="left">
 
-
+<p5 style="
+color: #f0e7d5;
+ALIGN="";
+margin: 0;"
+>IT Director positions are responsible for strategically leading a company technical initiative. Developing effective strategies, infrastructure and software to further advance and de risk the company’s position. What brings this position to my attention is the company’s attention to research and analytic to further create value for the customer, demonstrating the company’s appreciation for technology in the modern area and the role it will have to play for both internal and customer centric processes. The position is a highly demanding position fusing IT and Business. <br><br>
+The highest values skills for an IT director position would be strategy, leadership and project management. The ability to enhance the IT directive of a company to ensure it is efficient and competitive throughout the industry it operates. It is also critically important to have a high-level understanding of all branches of IT to ensure you can make educated and comprehensive decisions positioning the company for success. <br><br>
+Currently I have experience as an IT Manager looking after both Australia and New Zealand for a $52M business GroupeSEB. Leading projects with stakeholders across the globe from France, Canada, India and Hong Kong. Developing strategic plans to progress the company both internally and for our customers. Automating customer orders and warehouse flows for over 40 large customers through EDI channels across the country. I have also worked to automate and improve internal business processes to improve efficiency and agility of the company. Developing live automated reports to leverage for high accuracy analytics and forecasting work. <br><br>
+By completing my Bachelors in IT this will both provide me with the qualifications needed and improve my knowledge across the field of IT from both a technical and industry practice perspective. I’m fortunate to already be working in the industry and can grow my experience leading international projects for a company enhancing my leadership and strategic skills. Overall through my education and current career part I believe I’m positioning myself to take up such roles in the future.
+</p5>
 
 </body>
 </html>
