--- a/index.html
+++ b/index.html
@@ -63,23 +63,70 @@ During my studies I expect to gain a high-level overview of all major branches o
 color: #f0e7d5;
 font-size: 20px"
 ><i>Ideal Job:</i></h5>
-<p4><a href="https://www.w3schools.com/html/" >Job advertisement link<br><br></a></p4>
 
-<img src="master/JobAdd.png"
+<p4><a href="https://www.seek.com.au/job/41109903?type=standout#searchRequestToken=7cecbacb-e35b-4d66-890e-0ca601344d25" >Job advertisement link<br><br></a></p4>
+
+<img src="JobAdd.png"
 alt="JobAdd"
 width="350"
 height="600"
-align="left">
+vertical-align: baseline>
 
 <p5 style="
 color: #f0e7d5;
 ALIGN="";
 margin: 0;"
->IT Director positions are responsible for strategically leading a company technical initiative. Developing effective strategies, infrastructure and software to further advance and de risk the company’s position. What brings this position to my attention is the company’s attention to research and analytic to further create value for the customer, demonstrating the company’s appreciation for technology in the modern area and the role it will have to play for both internal and customer centric processes. The position is a highly demanding position fusing IT and Business. <br><br>
+><br><br>IT Director positions are responsible for strategically leading a company technical initiative. Developing effective strategies, infrastructure and software to further advance and de risk the company’s position. What brings this position to my attention is the company’s attention to research and analytic to further create value for the customer, demonstrating the company’s appreciation for technology in the modern area and the role it will have to play for both internal and customer centric processes. The position is a highly demanding position fusing IT and Business. <br><br>
 The highest values skills for an IT director position would be strategy, leadership and project management. The ability to enhance the IT directive of a company to ensure it is efficient and competitive throughout the industry it operates. It is also critically important to have a high-level understanding of all branches of IT to ensure you can make educated and comprehensive decisions positioning the company for success. <br><br>
 Currently I have experience as an IT Manager looking after both Australia and New Zealand for a $52M business GroupeSEB. Leading projects with stakeholders across the globe from France, Canada, India and Hong Kong. Developing strategic plans to progress the company both internally and for our customers. Automating customer orders and warehouse flows for over 40 large customers through EDI channels across the country. I have also worked to automate and improve internal business processes to improve efficiency and agility of the company. Developing live automated reports to leverage for high accuracy analytics and forecasting work. <br><br>
 By completing my Bachelors in IT this will both provide me with the qualifications needed and improve my knowledge across the field of IT from both a technical and industry practice perspective. I’m fortunate to already be working in the industry and can grow my experience leading international projects for a company enhancing my leadership and strategic skills. Overall through my education and current career part I believe I’m positioning myself to take up such roles in the future.
 </p5>
+
+<h5 style="
+color: #f0e7d5;
+font-size: 20px"
+><i>Personal Profile:</i></h5>
+<h5 style="
+color: #f0e7d5;
+font-size: 15px"
+>Myers-Briggs:</h5>
+
+<img src="Myers-Briggs.png"
+alt="Myers-Briggs"
+width="350"
+height="600"
+vertical-align: baseline>
+
+<h6 style="
+color: #f0e7d5;
+font-size: 15px"
+>Learning Style:</h6>
+
+<img src="Learning Style.png"
+alt="Learning style"
+width="600"
+height="400"
+vertical-align: baseline>
+
+<h6 style="
+color: #f0e7d5;
+font-size: 15px"
+>DISC:</h6>
+
+<img src="DISC.png"
+alt="DISC"
+width="600"
+height="400"
+vertical-align: baseline>
+
+<p6 style="
+color: #f0e7d5;
+ALIGN="";
+margin: 0;"
+><br><br>The results don’t come at a surprise being an analytic introverted person. However, they do hold quite large value to me. They show me that I need to be conscious of my own work patterns and how they can affect other stakeholders in a business, group or project. From an education perspective they reinforce my prior knowledge that I’m a hands-on learner and need to ensure when I’m studying to practice with projects. <br> <br>
+When working with a team, I need to be mindful that others may be frustrated when presented with large amounts of data and analytics. To ensure when I’m working with others I present and communicate in a clear, defined and accurate manner to ensure others are not lost in the details. Working with wider approach and segmenting larger projects. <br> <br>
+When given the opportunity to select a team the results have shown me, I work well with largely analytical and detail minded individuals. Working on large scale complex projects with logical and objective teams would look to present the best outcome overall. I should also aim however to step outside my comfort zone and work with teams and individuals whom may be very different to myself to diversify and grow my stakeholder engagement abilities.
+</p6>
 
 </body>
 </html>
