--- a/index.html
+++ b/index.html
@@ -130,13 +130,14 @@ When given the opportunity to select a team the results have shown me, I work we
 
 <hr>
 
-<h10 style="
+<h1 style="
+text-align: center;
 color: #f0e7d5;
 padding: 10px;
 margin: 0;
 font-size: 35px"
 
->Project Idea</h10>
+>Project Idea</h1>
 
 <p10 style="
 color: #f0e7d5;
