--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ color: #f0e7d5;
 padding: 10px;
 margin: 0;
 font-size: 35px"
-    
+
 >Jacob DEPARES My Profile</h1>
 
-     img src="me.jpg"   
+<img src="me.jpg"   
  <hr>
 <img src="me.jpg"
 alt="Me"
