--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ font-size: 20px"
 
 <p4><a href="https://www.seek.com.au/job/41109903?type=standout#searchRequestToken=7cecbacb-e35b-4d66-890e-0ca601344d25" >Job advertisement link<br><br></a></p4>
 
-<img src="JobAdd.png"
+<img src="https://github.com/jdepares/A1-My-Profile/blob/master/Me.jpg"
 alt="JobAdd"
 width="350"
 height="600"
