--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ font-size: 35px"
 
 
  <hr>
-<img src="me.jpg"
+<img src="https://github.com/jdepares/A1-My-Profile/blob/master/Me.jpg"
 alt="Me"
 width="120"
 height="140"
@@ -68,7 +68,7 @@ font-size: 20px"
 
 <p4><a href="https://www.seek.com.au/job/41109903?type=standout#searchRequestToken=7cecbacb-e35b-4d66-890e-0ca601344d25" >Job advertisement link<br><br></a></p4>
 
-<img src="https://github.com/jdepares/A1-My-Profile/blob/master/Me.jpg"
+<img src="JobAdd.png"
 alt="JobAdd"
 width="350"
 height="600"
