--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ font-size: 35px"
 
 
  <hr>
-<img src="https://github.com/jdepares/A1-My-Profile/blob/master/Me.jpg"
+<img src="https://github.com/jdepares/A1-My-Profile/blob/master/Me.jpg?raw=true"
 alt="Me"
 width="120"
 height="140"
