--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ font-size: 20px"
 
 <p4><a href="https://www.seek.com.au/job/41109903?type=standout#searchRequestToken=7cecbacb-e35b-4d66-890e-0ca601344d25" >Job advertisement link<br><br></a></p4>
 
-<img src="JobAdd.png"
+<img src="https://github.com/jdepares/A1-My-Profile/blob/master/JobAdd.PNG?raw=true"
 alt="JobAdd"
 width="350"
 height="600"
@@ -93,7 +93,7 @@ color: #f0e7d5;
 font-size: 15px"
 >Myers-Briggs:</h5>
 
-<img src="Myers-Briggs.png"
+<img src="https://github.com/jdepares/A1-My-Profile/blob/master/Myers-Briggs.PNG?raw=true"
 alt="Myers-Briggs"
 width="350"
 height="600"
@@ -104,7 +104,7 @@ color: #f0e7d5;
 font-size: 15px"
 >Learning Style:</h6>
 
-<img src="Learning Style.png"
+<img src="https://github.com/jdepares/A1-My-Profile/blob/master/Learning%20Style.PNG?raw=true"
 alt="Learning style"
 width="600"
 height="400"
@@ -115,7 +115,7 @@ color: #f0e7d5;
 font-size: 15px"
 >DISC:</h6>
 
-<img src="DISC.png"
+<img src="https://github.com/jdepares/A1-My-Profile/blob/master/DISC.PNG?raw=true"
 alt="DISC"
 width="600"
 height="280"
